--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 kotlin = "2.3.0"
-ktor = "3.1.3"
-logback = "1.5.16"
+ktor = "3.4.0"
+logback = "1.5.26"
 
 [libraries]
 # Ktor Server
@@ -25,3 +25,4 @@ ktor-server-test-host = { group = "io.ktor", name = "ktor-server-test-host", ver
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+ktor-plugin = { id = "io.ktor.plugin", version.ref = "ktor" }
