試しのコミット[2]

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,7 +11,10 @@ ktor {
   application {
     # プログラムの入り口となる関数を指定
     # 「パッケージ名.ファイル名Kt.関数名」の形式
-    modules = [ terakoya.gateway.ApplicationKt.module ]
+    modules = [
+      terakoya.gateway.ApplicationKt.sampleModule,
+      terakoya.gateway.ConfigurationCNKt.configureContentNegotiation,
+    ]
   }
 
   # 今後、セキュリティ（Webhookのシークレット）などを追加する場所
