試しのコミット[3]

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@ ktor {
   deployment {
     # 明日のドトール作戦で使用するポート
     port = 8080
-    # port = ${?PORT} # 環境変数 PORT があれば上書き（Cloud環境などへの対応）
+    port = ${?PORT} # 環境変数 PORT があれば上書き（Cloud環境などへの対応）
 
     # 開発中のコード変更を即座に反映させる場合（autoreload）
     watch = [ classes, resources ]
@@ -12,8 +12,8 @@ ktor {
     # プログラムの入り口となる関数を指定
     # 「パッケージ名.ファイル名Kt.関数名」の形式
     modules = [
-      terakoya.gateway.ApplicationKt.sampleModule,
-      terakoya.gateway.ConfigurationCNKt.configureContentNegotiation,
+      terakoyalabo.gateway.ApplicationKt.sampleModule,
+      terakoyalabo.gateway.ConfigurationCNKt.configureContentNegotiation,
     ]
   }
 
