--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,3 @@
 kotlin.code.style=official
 
-nexus.ip.labonet=192.168.11.6
-nexus.ip.vpn=100.98.144.29
-nexus.username=lax.km256
-nexus.password=sywhyt-9tikde-xyCkib
+version.gateway=0.0.1
