アーティファクトID決まらず

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,6 @@
 ktor {
   deployment {
-    # 明日のドトール作戦で使用するポート
-    port = 8080
-    port = ${?PORT} # 環境変数 PORT があれば上書き（Cloud環境などへの対応）
+    port = ${?PORT}
 
     # 開発中のコード変更を即座に反映させる場合（autoreload）
     watch = [ classes, resources ]
